--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,12 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "openai": "^4.20.1",
+    "langchain": "^0.0.208",
+    "@langchain/openai": "^0.0.14",
+    "@langchain/core": "^0.1.17",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -41,7 +46,10 @@
     "task-management",
     "express",
     "sqlite",
-    "typescript"
+    "typescript",
+    "ai",
+    "openai",
+    "langchain"
   ],
   "author": "",
   "license": "MIT"
